# ChangeLog for eix - Ebuild IndeX for portage

	Emil Beinroth <emilbeinroth at gmx.net>:
	- Fixed a small bug regarding -o/-a and atoms with a pattern .. thanks to
	  leonie for bringing this to my attention.
	- Added PROVIDE; bumped db-version
	- Fixing http://bugs.gentoo.org/show_bug.cgi?id=111927
	- Added our own strndup-implementation that will be used for ppc-macos
	  See http://bugs.gentoo.org/show_bug.cgi?id=111912
	- Finally, environment variables can be used to override eixrc-stuff.
	- Applied patch from http://bugs.gentoo.org/show_bug.cgi?id=111865, thanks JeR
	- Applied patch from http://bugs.gentoo.org/show_bug.cgi?id=112776
	- Applied patch from http://bugs.gentoo.org/show_bug.cgi?id=112806
	- Applied patches for scandir, sed, byteorder and regex from
	  http://bugs.gentoo.org/show_bug.cgi?id=111912
	- Fixed some small memory-leaks - valgrind reports one more that leads
	  into the glibc (getpwnam) .. but this is really a leak. See
	  --run-glibc-freeres in valgrind(1).
	- Rewrite BasicVersion (much more efficient) and fixes
	  http://dev.croup.de/proj/eix/ticket/1
	- Fix http://bugs.gentoo.org/show_bug.cgi?id=113735

*eix-0.5_beta

	Emil Beinroth <emilbeinroth at gmx.net>:
	- Formatstring(Conditions): If a "else" was missing, the if-true part was
	  linked to if-false.
	- Changed the arch-part of the dbheader from char[16] to string.
	- Fixed http://bugs.gentoo.org/show_bug.cgi?id=104083 - once again:
	  unsigned int vs. vector::size_type
	- Moved from #define in basicio.h to a namespace io with generic
	  read/write-functions for POD and {read,write}_string for strings.
	  Slowly moving other read/write-code into that namespace.
	- Bumped to 0.3.1
	- eix-sync hides output of emerge --sync and update-eix per default. Added
	  cli-options -v, -h, -q
	- Fixed a non-existing bug :) http://bugs.gentoo.org/show_bug.cgi?id=97462
	- Fixed a rather *extrem* bug: The read-only-what-we-need-to-check-if-the-package-matches